--- a/src/pages/admin/UserManager.scss
+++ b/src/pages/admin/UserManager.scss
@@ -103,3 +103,11 @@
         margin-right: 5px;
     }
 }
+
+.tableFilterContainer {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 20px;
+
+    
+}
