--- a/src/components/avatar/Avatar.scss
+++ b/src/components/avatar/Avatar.scss
@@ -1,6 +1,16 @@
-.avatarContainer {
+.smallavatarContainer {
     width: 40px;
     height: 40px;
+    img {
+        width: 100%;
+        height: 100%;
+        border: 2px solid #4CB576;
+    }
+}
+
+.largeavatarContainer {
+    width: 90px;
+    height: 90px;
     img {
         width: 100%;
         height: 100%;
