--- a/src/components/datatable/DataTable.scss
+++ b/src/components/datatable/DataTable.scss
@@ -18,6 +18,11 @@
     padding: 0px 30px;
 }
 
+.my-modal {
+    width: 50vw;
+    max-width: 60vw;
+}
+
 .react-bootstrap-table-pagination-list {
     display: flex;
     flex-direction: row-reverse;
