--- a/src/components/jjcmission.css
+++ b/src/components/jjcmission.css
@@ -1,8 +1,26 @@
 .headtext{
+
     font-size: 24px;
     color: white;
     font-weight: 600;
-    font-family:'Noto Sans';
+    font-family: "Noto Sans";
     font-style: normal;
-    text-align: justify;
+    text-align: left;
+    padding-top: 96px;
+}
+/*.jjc_card{*/
+/*    border-radius: 20px;*/
+/*}*/
+.card_images{
+    width: 100%;
+    height:7vw;
+    object-fit: contain;
+
+}
+
+
+@media only screen and (min-width: 576px) {
+    #leftpad{
+        padding-left: 89px;
+    }
 }
