--- a/src/components/navbarhoverstyle.css
+++ b/src/components/navbarhoverstyle.css
@@ -1,8 +1,10 @@
 
 
 .navbarhover{
-    font-size: '14px';
-    font-family: 'Noto Sans';
+    /*font-size: '14px';*/
+    /*font-family: "Noto Sans";*/
+    /*font-family: 'Noto Sans';*/
+    font-style: normal;
     font-weight: 500;
     
 }
@@ -14,7 +16,7 @@
 .jjclink:hover, .jjclink:active, .jjclink:link, .jjclink:visited{
     color: black;
     text-decoration: none;
-    font-size: '14px';
-    font-family: 'Noto Sans';
+    /*font-size: '14px';*/
+    /*font-family: 'Noto Sans';*/
     
 }
