--- a/src/components/testimonials.css
+++ b/src/components/testimonials.css
@@ -4,24 +4,9 @@ CC 2.0 License Iatek LLC 2018
 Attribution required
 
 */
-/*!*.carousel {*!*/
-/*!*    margin: 1rem;*!*/
-/*!*}*!*/
-/*!*.carousel-control-prev {*!*/
-/*!*    margin-left: -20px;*!*/
-/*!*}*!*/
-
-/*!*.carousel-control-next {*!*/
-/*!*    margin-right: -20px;*!*/
-/*!*}*!*/
-/*!*.carousel-control-prev, .carousel-control-next {*!*/
-/*!*    position: inherit;*!*/
-/*}*/
 @media (min-width: 768px) {
 
-    /*.carousel {*/
-    /*    margin: 1rem;*/
-    /*}*/
+
     /*.carousel-control-prev {*/
     /*    margin-left: -120px;*/
     /*}*/
@@ -30,21 +15,19 @@ Attribution required
     /*    margin-right: -120px;*/
     /*}*/
 
-    /*.carousel-control-prev, .carousel-control-next {*/
-    /*    position: inherit;*/
-    /*}*/
     /* show 3 items */
     .carousel-inner .active,
     .carousel-inner .active + .carousel-item,
-    .carousel-inner .active + .carousel-item + .carousel-item {
+    .carousel-inner .active + .carousel-item + .carousel-item,
+    .carousel-inner .active + .carousel-item + .carousel-item + .carousel-item {
         display: block;
     }
 
     .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
     .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item,
-    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
+    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item,
+    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item + .carousel-item {
         transition: none;
-        margin-right: initial;
     }
 
     .carousel-inner .carousel-item-next,
@@ -53,10 +36,10 @@ Attribution required
         transform: translate3d(0, 0, 0);
     }
 
-    .carousel-inner .active.carousel-item + .carousel-item + .carousel-item + .carousel-item {
+    .carousel-inner .active.carousel-item + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
         position: absolute;
         top: 0;
-        right: -33.3333%;
+        right: -25%;
         z-index: -1;
         display: block;
         visibility: visible;
@@ -66,7 +49,8 @@ Attribution required
     .active.carousel-item-left + .carousel-item-next.carousel-item-left,
     .carousel-item-next.carousel-item-left + .carousel-item,
     .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item,
-    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item {
+    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item,
+    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
         position: relative;
         transform: translate3d(-100%, 0, 0);
         visibility: visible;
@@ -86,7 +70,8 @@ Attribution required
     .active.carousel-item-right + .carousel-item-prev.carousel-item-right,
     .carousel-item-prev.carousel-item-right + .carousel-item,
     .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item,
-    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item {
+    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item,
+    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
         position: relative;
         transform: translate3d(100%, 0, 0);
         visibility: visible;
