--- a/src/components/ongoinginitiatives.css
+++ b/src/components/ongoinginitiatives.css
@@ -44,6 +44,7 @@ Attribution required
     .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item,
     .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
         transition: none;
+        margin-left: initial;
         margin-right: initial;
     }
 
