--- a/src/components/navbarhoverstyle.css
+++ b/src/components/navbarhoverstyle.css
@@ -1,4 +1,12 @@
-
+/*.navbar-brand {*/
+/*    width:150px;*/
+/*    font-size: 24px;*/
+/*}*/
+.navbar-brand img {
+    height: 80px;
+    /* put value of image height as your need */
+    float: left;
+}
 
 .navbarhover{
     /*font-size: '14px';*/
@@ -6,6 +14,7 @@
     /*font-family: 'Noto Sans';*/
     font-style: normal;
     font-weight: 500;
+    line-height: 19px;
     
 }
 .navbarhover:hover{
