--- a/src/components/ongoinginitiatives.css
+++ b/src/components/ongoinginitiatives.css
@@ -1,98 +1,99 @@
-/*
+/*!**/
 
-CC 2.0 License Iatek LLC 2018
-Attribution required
+/*CC 2.0 License Iatek LLC 2018*/
+/*Attribution required*/
 
-*/
-/*!*.carousel {*!*/
-/*!*    margin: 1rem;*!*/
-/*!*}*!*/
-/*!*.carousel-control-prev {*!*/
-/*!*    margin-left: -20px;*!*/
-/*!*}*!*/
+/**!*/
+/*!*!*.carousel {*!*!*/
+/*!*!*    margin: 1rem;*!*!*/
+/*!*!*}*!*!*/
+/*!*!*.carousel-control-prev {*!*!*/
+/*!*!*    margin-left: -20px;*!*!*/
+/*!*!*}*!*!*/
 
-/*!*.carousel-control-next {*!*/
-/*!*    margin-right: -20px;*!*/
+/*!*!*.carousel-control-next {*!*!*/
+/*!*!*    margin-right: -20px;*!*!*/
+/*!*!*}*!*!*/
+/*!*!*.carousel-control-prev, .carousel-control-next {*!*!*/
+/*!*!*    position: inherit;*!*!*/
 /*!*}*!*/
-/*!*.carousel-control-prev, .carousel-control-next {*!*/
-/*!*    position: inherit;*!*/
+/*@media (min-width: 768px) {*/
+
+/*    !*.carousel {*!*/
+/*    !*    margin: 1rem;*!*/
+/*    !*}*!*/
+/*    !*.carousel-control-prev {*!*/
+/*    !*    margin-left: -120px;*!*/
+/*    !*}*!*/
+
+/*    !*.carousel-control-next {*!*/
+/*    !*    margin-right: -120px;*!*/
+/*    !*}*!*/
+
+/*    !*.carousel-control-prev, .carousel-control-next {*!*/
+/*    !*    position: inherit;*!*/
+/*    !*}*!*/
+/*    !* show 3 items *!*/
+/*    .carousel-inner .active,*/
+/*    .carousel-inner .active + .carousel-item,*/
+/*    .carousel-inner .active + .carousel-item + .carousel-item {*/
+/*        display: block;*/
+/*    }*/
+
+/*    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),*/
+/*    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item,*/
+/*    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {*/
+/*        transition: none;*/
+/*        margin-left: initial;*/
+/*        margin-right: initial;*/
+/*    }*/
+
+/*    .carousel-inner .carousel-item-next,*/
+/*    .carousel-inner .carousel-item-prev {*/
+/*        position: relative;*/
+/*        transform: translate3d(0, 0, 0);*/
+/*    }*/
+
+/*    .carousel-inner .active.carousel-item + .carousel-item + .carousel-item + .carousel-item {*/
+/*        position: absolute;*/
+/*        top: 0;*/
+/*        right: -33.3333%;*/
+/*        z-index: -1;*/
+/*        display: block;*/
+/*        visibility: visible;*/
+/*    }*/
+
+/*    !* left or forward direction *!*/
+/*    .active.carousel-item-left + .carousel-item-next.carousel-item-left,*/
+/*    .carousel-item-next.carousel-item-left + .carousel-item,*/
+/*    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item,*/
+/*    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item {*/
+/*        position: relative;*/
+/*        transform: translate3d(-100%, 0, 0);*/
+/*        visibility: visible;*/
+/*    }*/
+
+/*    !* farthest right hidden item must be abso position for animations *!*/
+/*    .carousel-inner .carousel-item-prev.carousel-item-right {*/
+/*        position: absolute;*/
+/*        top: 0;*/
+/*        left: 0;*/
+/*        z-index: -1;*/
+/*        display: block;*/
+/*        visibility: visible;*/
+/*    }*/
+
+/*    !* right or prev direction *!*/
+/*    .active.carousel-item-right + .carousel-item-prev.carousel-item-right,*/
+/*    .carousel-item-prev.carousel-item-right + .carousel-item,*/
+/*    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item,*/
+/*    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item {*/
+/*        position: relative;*/
+/*        transform: translate3d(100%, 0, 0);*/
+/*        visibility: visible;*/
+/*        display: block;*/
+/*        visibility: visible;*/
+/*    }*/
+
 /*}*/
-@media (min-width: 768px) {
 
-    /*.carousel {*/
-    /*    margin: 1rem;*/
-    /*}*/
-    /*.carousel-control-prev {*/
-    /*    margin-left: -120px;*/
-    /*}*/
-
-    /*.carousel-control-next {*/
-    /*    margin-right: -120px;*/
-    /*}*/
-
-    /*.carousel-control-prev, .carousel-control-next {*/
-    /*    position: inherit;*/
-    /*}*/
-    /* show 3 items */
-    .carousel-inner .active,
-    .carousel-inner .active + .carousel-item,
-    .carousel-inner .active + .carousel-item + .carousel-item {
-        display: block;
-    }
-
-    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
-    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item,
-    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
-        transition: none;
-        margin-left: initial;
-        margin-right: initial;
-    }
-
-    .carousel-inner .carousel-item-next,
-    .carousel-inner .carousel-item-prev {
-        position: relative;
-        transform: translate3d(0, 0, 0);
-    }
-
-    .carousel-inner .active.carousel-item + .carousel-item + .carousel-item + .carousel-item {
-        position: absolute;
-        top: 0;
-        right: -33.3333%;
-        z-index: -1;
-        display: block;
-        visibility: visible;
-    }
-
-    /* left or forward direction */
-    .active.carousel-item-left + .carousel-item-next.carousel-item-left,
-    .carousel-item-next.carousel-item-left + .carousel-item,
-    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item,
-    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item {
-        position: relative;
-        transform: translate3d(-100%, 0, 0);
-        visibility: visible;
-    }
-
-    /* farthest right hidden item must be abso position for animations */
-    .carousel-inner .carousel-item-prev.carousel-item-right {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        display: block;
-        visibility: visible;
-    }
-
-    /* right or prev direction */
-    .active.carousel-item-right + .carousel-item-prev.carousel-item-right,
-    .carousel-item-prev.carousel-item-right + .carousel-item,
-    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item,
-    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item {
-        position: relative;
-        transform: translate3d(100%, 0, 0);
-        visibility: visible;
-        display: block;
-        visibility: visible;
-    }
-
-}
