--- a/src/components/avatar/Avatar.scss
+++ b/src/components/avatar/Avatar.scss
@@ -1,10 +1,12 @@
+@import '../../utils/variables.scss';
+
 .smallavatarContainer {
     width: 40px;
     height: 40px;
     img {
         width: 100%;
         height: 100%;
-        border: 2px solid #4CB576;
+        border: 2px solid $green;
     }
 }
 
@@ -14,6 +16,6 @@
     img {
         width: 100%;
         height: 100%;
-        border: 2px solid #4CB576;
+        border: 2px solid $green;
     }
 }
