Add scss variables to scss files

--- a/src/components/customTextBox/CustomTextBox.scss
+++ b/src/components/customTextBox/CustomTextBox.scss
@@ -12,7 +12,7 @@
         border-radius: 5px;
         &::placeholder {
             padding-left: 10px;
-            color: #403F3F;
+            color: $charcoalBlack;
             opacity: 0.4;
         }
     }
