--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -8,14 +8,19 @@ $charcoalBlack: #403F3F;
 $green: #4CB576;
 $whiteSmoke: #F6F6F6;
 $grey: #7B889A;
+$lightGrey: #B6C3D1;
+$red: #FF4020;
+$darkBlue: #1E2350;
 $pageBackground: #E9EDF5;
 
 // font sizes
+$largeTitle: 20px;
 $titleSize: 16px;
 $regularSize: 14px;
 
 // font-weight
 $regular: 400;
+$lightBold: 500;
 $semiBold: 600;
 $bold: 700;
 $extraBold: 900;
