--- a/src/components/customTextBox/CustomTextBox.scss
+++ b/src/components/customTextBox/CustomTextBox.scss
@@ -1,3 +1,5 @@
+@import '../../utils/variables.scss';
+
 .inputContainer {
     width: 280px;
     height: 40px;
@@ -5,12 +7,12 @@
     & input {
         width: 100%;
         height: 100%;
-        border: 1px solid #F6F6F6;
+        border: 1px solid $whiteSmoke;
         box-sizing: border-box;
         border-radius: 5px;
         &::placeholder {
             padding-left: 10px;
-            color: #403F3F;
+            color: $charcoalBlack;
             opacity: 0.4;
         }
     }
