--- a/src/components/userModal/UserModal.scss
+++ b/src/components/userModal/UserModal.scss
@@ -1,8 +1,9 @@
+@import '../../utils/variables.scss';
+
 .name-container {
-    font-family: Noto Sans;
     font-style: normal;
-    font-weight: bold;
-    font-size: 20px;
+    font-weight: $bold;
+    font-size: $largeTitle;
 }
 
 .Btn-reject {
@@ -11,21 +12,21 @@
   }
   
   .Btn-accept {
-    background-color: #4CB576!important;
+    background-color: $green!important;
     margin-right: 10px;
     width:100%;
 }
 
 .Btn-submit {
-    background-color: #1E2350;
+    background-color: $darkBlue;
     margin-top:10px;
     width:100%;
-    color:white;
+    color: $white;
 }
 
 .info-container {
     width:100%;
-    background-color: #F6F6F6;
+    background-color: $whiteSmoke;
 }
 
 .divOutside {
@@ -46,17 +47,15 @@
 
 .info-container-headers {
     margin-left:2px;
-    font-family: 'Noto Sans';
-    color: #403F3F;
+    color: $charcoalBlack;
     text-align: center;
-    font-weight: 600;
-    font-size: 16px;
+    font-weight: $semiBold;
+    font-size: $titleSize;
 }
 
 .info-container-info {
     margin-left:5px;
-    font-family: 'Noto Sans';
-    color: #403F3F;
-    font-weight: 500;
-    font-size: 16px;
+    color: $charcoalBlack;
+    font-weight: $lightBold;
+    font-size: $titleSize;
 }
