--- a/src/pages/landingpage/components/newsFeed/NewsFeed.scss
+++ b/src/pages/landingpage/components/newsFeed/NewsFeed.scss
@@ -1,7 +1,30 @@
 @import "../../../../utils/variables.scss";
 
-.news-feed {
-  border-color: $vividred;
-  width: 2rem;
-  margin-top: 0px;
+.NEWSFEED {
+
+  .news-feed {
+    border-color: $vividred;
+    width: 2rem;
+    margin-top: 0px;
+  }
+  .news-card {
+    border: unset;
+
+    .card-img {
+      height: 100%
+    }
+    .card-title {
+      font-size: 18px;
+      font-weight: bold;
+    }
+    .card-text {
+      font-size: 14px;
+
+      &.read-more {
+        color: $vividred;
+        font-weight: bold;
+        cursor: pointer;
+      }
+    }
+  }
 }
