--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -12,7 +12,7 @@ $lightGrey: #b6c3d1;
 $red: #ff4020;
 $darkBlue: #1e2350;
 $pageBackground: #e9edf5;
-$vividred: #ff3c00;
+$vividred: #0c40db;
 
 // font sizes
 $largeTitle: 20px;
