Revampped Login page

--- a/src/pages/landingpage/components/contactUs/ContactUs.scss
+++ b/src/pages/landingpage/components/contactUs/ContactUs.scss
@@ -1,5 +1,9 @@
 @import "../../../../utils/variables.scss";
 
+.CONTACTUS{
+  padding-top: 6em;
+  margin-top: -6em;
+}
 .contact-us {
   border-color: $vividred;
   width: 2rem;
