--- a/src/pages/landingpage/components/newsFeed/NewsFeed.scss
+++ b/src/pages/landingpage/components/newsFeed/NewsFeed.scss
@@ -1,6 +1,8 @@
 @import "../../../../utils/variables.scss";
 
 .NEWSFEED {
+  padding-top: 5em;
+  margin-top: -5em;
 
   .news-feed {
     border-color: $vividred;
