--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -12,7 +12,8 @@ $lightGrey: #b6c3d1;
 $red: #ff4020;
 $darkBlue: #1e2350;
 $pageBackground: #e9edf5;
-$vividred: #0c40db;
+$vividred: #ff3c00;
+$bgBlue: #2C5797;
 
 // font sizes
 $largeTitle: 20px;
@@ -26,3 +27,6 @@ $lightBold: 500;
 $semiBold: 600;
 $bold: 700;
 $extraBold: 900;
+
+//height
+$logoHeight: 80px;
