--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -5,32 +5,31 @@
   }
 }
 
+.navbar{
+  padding: 0 !important;
+}
+
 .login-button, .post-questions-button{
-  border-radius: 8px;
-  color: $white;
-  font-weight: $lightBold;
+  border-radius: 8px !important;
+  color: $white !important;
+  font-weight: $lightBold !important;
 }
 
 .donate-button {
-  border: 1px solid $red;
-  border-radius: 8px;
-  color: $red;
-  background-color: $white;
-  font-weight: $lightBold;
+  border: 1px solid $red !important;
+  border-radius: 8px !important;
+  color: $red !important;
+  background-color: $white !important;
+  font-weight: $lightBold !important;
 }
 
 .login-button {
-  border: 1px solid $red;
-  background-color: $red;
-}
-
-.post-questions-button{
-  border: 1px solid $darkBlue;
-  background-color: $darkBlue;
+  border: 1px solid $red !important;
+  background-color: $red !important;
 }
 
 .navbar-brand img {
-  height: 80px;
+  height: $logoHeight;
   /* put value of image height as your need */
   float: left;
 }
@@ -42,7 +41,9 @@
 }
 
 .navbarhover:hover {
-  cursor: pointer;
+  text-decoration: underline !important;
+  //background: $lightGrey;
+  //border-radius: 5px;
 }
 
 .jjclink:hover,
@@ -58,19 +59,8 @@
   padding-left: 1rem !important;
 }
 
-.user-profile-dropdown-icon{
-  cursor: pointer;
-}
-
-.user-profile-dropdown-content > div{
-  font-size: medium;
-  cursor: pointer;
-}
-
-.user-profile-dropdown-content > div > a{
-  color: black;
-}
-
-.user-profile-dropdown-content > div:hover{
+.activeLink{
+  //background: $grey;
+  //border-radius: 5px;
   text-decoration: underline;
 }
