--- a/src/pages/landingpage/components/jjcMission/JJCMission.scss
+++ b/src/pages/landingpage/components/jjcMission/JJCMission.scss
@@ -2,22 +2,32 @@
 
 .mission-color {
   background: linear-gradient(180deg, #2c5797 0%, #0f2d58 100%);
+  padding-top: 6em;
+  margin-top: -6em;
 }
 .mission-card {
   border-radius: 8px;
+  transition: transform .5s;
 }
+
+.mission-card:hover{
+  transform: scale(1.15);
+  transition: transform .5s;
+}
+
 .card_images {
   width: 100%;
   height: 7vw;
   object-fit: contain;
 }
+
 .join-button {
-  color: $white;
-  background-color: $vividred;
-  border-radius: 8px;
+  color: $white !important;
+  background-color: $vividred !important;
+  border-radius: 8px !important;
   &:hover {
-    background-color: $white;
-    color: $black;
+    background-color: $white !important;
+    color: $black !important;
   }
 }
 .headtext {
