--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -1,5 +1,6 @@
 //font
 $font: "Noto Sans", sans-serif;
+//$font: "Courier New";
 
 // colors
 $white: white;
@@ -13,7 +14,7 @@ $red: #ff4020;
 $darkBlue: #1e2350;
 $pageBackground: #e9edf5;
 $vividred: #ff3c00;
-$bgBlue: #2C5797;
+$bgBlue: #2c5797;
 
 // font sizes
 $largeTitle: 20px;
