Changed user dropdown

--- a/src/pages/admin/AdminNavbar.scss
+++ b/src/pages/admin/AdminNavbar.scss
@@ -21,3 +21,13 @@
   left: -1em;
   font-size: smaller;
 }
+
+.user-dropdown {
+  padding: 0.5em;
+  margin-right: 3em;
+  font-size: large !important;
+}
+
+.user-dropdown-icon {
+  margin-right: 1em;
+}
