--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -1,5 +1,6 @@
 //font
 $font: "Noto Sans", sans-serif;
+//$font: "Courier New";
 
 // colors
 $white: white;
@@ -13,6 +14,7 @@ $red: #ff4020;
 $darkBlue: #1e2350;
 $pageBackground: #e9edf5;
 $vividred: #ff3c00;
+$bgBlue: #2c5797;
 
 // font sizes
 $largeTitle: 20px;
@@ -26,3 +28,6 @@ $lightBold: 500;
 $semiBold: 600;
 $bold: 700;
 $extraBold: 900;
+
+//height
+$logoHeight: 80px;
