--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -23,6 +23,11 @@
   padding: 5%;
   border-radius: 5px;
   background: $white;
+
+  .error {
+    color: red;
+    margin-bottom: 16px;
+  }
 }
 
 .login-link{
