--- a/src/components/Onboarding/Onboarding.scss
+++ b/src/components/Onboarding/Onboarding.scss
@@ -4,7 +4,6 @@
       height: 120px;
       width: 120px;
       border-radius: 50%;
-      cursor: pointer;
     }
     .type-container {
       box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -16,6 +15,39 @@
       }
       .type-logo {
         height: 84px;
+      }
+    }
+    .education-container {
+      .type-logo {
+        height: 180px;
+        width: 238px;
+      }
+    }
+    .profession-container {
+      .type-logo {
+        height: 180px;
+        width: 238px;
+      }
+    }
+  }
+  .card-footer {
+    .buttons {
+      text-align: right;
+      button {
+        height: 48px;
+        width: 144px;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+      .back-button {
+        color: #403F3F;
+        background: transparent;
+        border: 0;
+        margin-right: 16px;
+      }
+      .submit-button {
+        color: white;
+        background: #DC3B44;
       }
     }
   }
