--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -15,6 +15,7 @@ $darkBlue: #1e2350;
 $pageBackground: #e9edf5;
 $vividred: #ff3c00;
 $bgBlue: #2c5797;
+$slateGrey: #7B889A;
 
 // font sizes
 $largeTitle: 20px;
