--- a/src/components/userModal/UserModal.scss
+++ b/src/components/userModal/UserModal.scss
@@ -82,3 +82,25 @@
     font-size: 9px;
     color: white;
 }
+
+.yes-button {
+    margin-left: 8px;
+    margin-right: 8px;
+    padding: 8px 16px;
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+  }
+
+.no-button {
+    padding: 8px 16px;
+    background-color: #f44336;
+    color: white;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+}
