--- a/src/components/forgotPasswordMessage/ForgotPasswordMessage.scss
+++ b/src/components/forgotPasswordMessage/ForgotPasswordMessage.scss
@@ -84,6 +84,9 @@
     /* identical to box height */
     color: #FFFFFF;
 }
+  .message-content a:link{
+    color: #FFFFFF;
+  }
 
   .message-content-1{
     height: 19px;
@@ -110,6 +113,9 @@
     letter-spacing: 0px;
     text-align: left;
     position: absolute;
+    color: #FFFFFF;
+  }
+  .message-content-1 a:link{
     color: #FFFFFF;
   }
 
