Added banner in home page and updated design for jjc mission as per design

--- a/src/pages/landingpage/components/jjcMission/JJCMission.scss
+++ b/src/pages/landingpage/components/jjcMission/JJCMission.scss
@@ -1,13 +1,14 @@
 @import "../../../../utils/variables.scss";
 
 .mission-color {
-  background: linear-gradient(180deg, #2c5797 0%, #0f2d58 100%);
   padding-top: 6em;
-  margin-top: -6em;
+  margin-top: 1rem;
 }
 .mission-card {
   border-radius: 8px;
   transition: transform .5s;
+  background: #2c5797;
+  color: white;
 }
 
 .mission-card:hover{
@@ -32,11 +33,10 @@
 }
 .headtext {
   font-size: $largeTitle;
-  color: white;
+  color: black;
   font-weight: $semiBold;
   font-style: normal;
-  text-align: left;
-  padding-top: 96px;
+  text-align: center;
 }
 .mission-text {
   font-size: 12px;
