--- a/src/pages/landingpage/components/banner/Banner.scss
+++ b/src/pages/landingpage/components/banner/Banner.scss
@@ -5,7 +5,7 @@
         padding-left: 0%;
         padding-right: 0%;
       }
-    img {
+    .top-banner img {
         max-width: 100%;
         height: auto;
         margin: 0 auto;
