--- a/src/components/forgotPassword/ForgotPassword.scss
+++ b/src/components/forgotPassword/ForgotPassword.scss
@@ -1,68 +1,57 @@
 @import "../../utils/variables.scss";
 
-.FORGOT-PASSWORD{
-    .forgot-password-container{
+.row.FORGOT-PASSWORD {
+  .forgot-password-container {
     height: 600px;
-    width: 1520px;
-    left: 0px;
-    top: 0px;
+    width: 100%;
     border-radius: 0px;
     background: linear-gradient(180deg, #0F2D58 0%, #2C5797 55.91%);
     border-radius: 0px;
     position: relative;
-    }
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .forgot-password-header{
-    height: 33px;
-    width: 212px;
-    left: 660px;
-    top: 60px;
-    border-radius: nullpx;
+  .forgot-password-header {
     font-family: 'Noto Sans';
     font-style: normal;
     font-size: 24px;
     font-weight: 700;
     line-height: 33px;
     letter-spacing: 0px;
-    text-align: left;
-    position: absolute;
-    color: #FFFFFF; 
-    }
+    text-align: center;
+    position: relative;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+  }
 
-    .forgot-password-content{
-    height: 38px;
-    width: 387px;
-    left: 570px;
-    top: 100px;
-    border-radius: nullpx;
+  .forgot-password-content {
     font-size: 14px;
     font-weight: 500;
     line-height: 19px;
     letter-spacing: 0px;
     text-align: center;
-    position: absolute;
     font-family: 'Noto Sans';
-    font-style: normal;   
-    color: #FFFFFF; 
-    }
+    font-style: normal;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+  }
 
-    .outlinebox{      
-    height: 219px;
-    width: 540px;
-    left: 500px;
-    top: 160px;
+  .outlinebox {
+    width: 100%;
+    max-width: 540px;
     border-radius: 8px;
     background: #FFFFFF;
-    position: absolute;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.147044);    
-    }
+    position: relative;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.147044);
+    padding: 20px;
+    box-sizing: border-box;
+  }
 
-    .label{
-    height: 19px;
-    width: 334px;
-    left: 40px;
-    top: 40px;
-    border-radius: nullpx;
+  .label {
     font-family: 'Nunito Sans';
     font-style: normal;
     font-size: 14px;
@@ -70,38 +59,32 @@
     line-height: 19px;
     letter-spacing: 0px;
     text-align: left;
-    position: absolute;
+    position: relative;
     mix-blend-mode: normal;
-    opacity: 0.9; 
-    }
+    opacity: 0.9;
+    margin-bottom: 20px;
+  }
 
-    .inlinebox{
+  .inlinebox {
     height: 48px;
-    width: 480px;
-    left: 0px;
-    top: 30px;
+    width: 100%;
     border-radius: 8px;
     background: #F6F6F6;
-    position: absolute;
-    }
+    position: relative;
+  }
 
-    .button-box{
+  .button-box {
     height: 48px;
-    width: 480px;
-    left: 0px;
-    top: 100px;
+    width: 100%;
     border-radius: 8px;
     background: #FF3E06;
-    border: 1x solid #FF3E06;
-    position: absolute;
+    border: 1px solid #FF3E06;
+    position: relative;
+  }
 
-    }
-
-    .submit-button{
+  .submit-button {
     height: 48px;
-    width: 480px;
-    left: 0px;
-    top: 0px;
+    width: 100%;
     border-radius: 8px;
     font-family: 'Noto Sans';
     font-style: normal;
@@ -110,7 +93,30 @@
     line-height: 20px;
     letter-spacing: 0px;
     text-align: center;
-    position: absolute;
+    position: relative;
     color: #FFFFFF;
+  }
+
+  // Media queries for responsiveness
+  @media (max-width: 768px) {
+    .forgot-password-container {
+      height: auto;
+      padding: 10px;
     }
+
+    .outlinebox {
+      max-width: 100%;
+    }
+  }
+
+  @media (max-width: 575px) {
+    .forgot-password-container {
+      padding: 10px;
+    }
+
+    .outlinebox {
+      width: 100%;
+      max-width: 100%;
+    }
+  }
 }
