--- a/src/pages/landingpage/components/aboutUs/AboutUs.scss
+++ b/src/pages/landingpage/components/aboutUs/AboutUs.scss
@@ -1,69 +1,22 @@
-@import "../../../../utils/variables.scss";
-
-.AboutUsPage{
-
-.AboutUS
-{
-    border-radius: [object Object]px;
-    position: relative;
-    width: 1283px;
-    height: 500px;
-    left: 84px;
-}
-
-.content
-{
-    height: 57px;
-    width: 624px;
-    left: 750px;
-    top: 280px;
-    border-radius: nullpx;
-    font-family: Nunito Sans;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 19px;
-    letter-spacing: 0px;
-    text-align: left;
-    position: absolute;
-    font-style: normal;
-    color: #000000;
-}
-.content1
-{
-    position: absolute;
-    width: 624px;
-    height: 112px;
-    left: 750px;
-    top: 130px;
-    font-family: 'Nunito Sans';
-    font-style: italic;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 36px;
-    /* or 150% */
-    color: #000000;
-}
-
-.aboutUsImage
-{
-    /* Bitmap */
-    position: absolute;
-    width: 624px;
-    height: 341px;
-    left: 70px;
-    top: 100px;
+.aboutUsImage {
+    height: 300px;
+    background-color: #ccc;
     background: url(../../../../assets/images/Bitmap.png);
-    border-radius: 0px;
+    background-size: cover;
+    background-position: center;
 }
-.knowMore
-{
-    /* Know More */
 
-    position: absolute;
-    width: 100px;
-    height: 50px;
-    left: 750px;
-    top: 360px;
+.aboutUsHeading {
+    text-align: center;
+}
+
+.about-us {
+    width: 4rem;
+    border-color: $vividred;
+}
+
+.knowMore {
+    /* Know More */
 
     font-family: 'Noto Sans';
     font-style: normal;
@@ -75,28 +28,17 @@
     border-color: #FF3C00;
     color: #FF3C00;
 }
-.aboutUsHeading
-{
-    text-align: center;
-    position: absolute;
-    // width: 100px;
-    // height: 27px;
-    left: 650px;
-    top: 50px;
 
-    font-family: 'Noto Sans';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 27px;
+@media only screen and (max-width: 767px) {
+    .aboutUsImage {
+        height: 300px;
+    }
 
-    color: #000000;
-    border-radius: nullpx;
-}
-.about-us {
-    border-color: $vividred;
-    width: 2rem;
-    margin-top: -2px;
-  }
+    .knowMoreBox {
+        text-align: center;
+    }
 
+    .knowMore {
+        display: inline-block;
+    }
 }
