--- a/src/pages/landingpage/components/aboutUs/AboutUs.scss
+++ b/src/pages/landingpage/components/aboutUs/AboutUs.scss
@@ -1,102 +1,68 @@
 @import "../../../../utils/variables.scss";
-
-.AboutUsPage{
-
-.AboutUS
-{
-    border-radius: [object Object]px;
-    position: relative;
-    width: 1283px;
+.ABOUTUS{
+    padding-top: 3em;
+    margin-top: -5em;
+    padding-left: 2rem;
+    padding-right: 2rem;
+.aboutUsImage {
     height: 500px;
-    left: 84px;
+    background-color: #ccc;
+    background: url(../../../../assets/images/AboutUs.png);
+    background-size: cover;
+    background-position: center;
 }
-
-.content
-{
-    height: 57px;
-    width: 624px;
-    left: 750px;
-    top: 280px;
-    border-radius: nullpx;
-    font-family: Nunito Sans;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 19px;
-    letter-spacing: 0px;
-    text-align: left;
-    position: absolute;
-    font-style: normal;
-    color: #000000;
-}
-.content1
-{
-    position: absolute;
-    width: 624px;
-    height: 112px;
-    left: 750px;
-    top: 130px;
-    font-family: 'Nunito Sans';
-    font-style: italic;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 36px;
-    /* or 150% */
-    color: #000000;
-}
-
-.aboutUsImage
-{
-    /* Bitmap */
-    position: absolute;
-    width: 624px;
-    height: 341px;
-    left: 70px;
-    top: 100px;
-    background: url(../../../../assets/images/Bitmap.png);
-    border-radius: 0px;
-}
-.knowMore
-{
-    /* Know More */
-
-    position: absolute;
-    width: 100px;
-    height: 50px;
-    left: 750px;
-    top: 360px;
-
-    font-family: 'Noto Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 20px;
-    /* identical to box height, or 143% */
-    border-radius: nullpx;
-    border-color: #FF3C00;
-    color: #FF3C00;
-}
-.aboutUsHeading
-{
+.aboutUsHeading {
     text-align: center;
-    position: absolute;
-    // width: 100px;
-    // height: 27px;
-    left: 650px;
-    top: 50px;
-
-    font-family: 'Noto Sans';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 27px;
-
-    color: #000000;
-    border-radius: nullpx;
 }
 .about-us {
+    width: 4rem;
     border-color: $vividred;
-    width: 2rem;
-    margin-top: -2px;
+}
+.know-more-button{
+    margin-top: 2rem;
+    border-radius: 8px !important;
+    color: $white !important;
+    font-weight: $lightBold !important;
+    border: 1px solid $red !important;
+    background-color: $red !important;
   }
+.about-us-text{
+    padding-top: 4rem;
+}
+@media only screen and (max-width: 767px) {
+    .aboutUsImage {
+        height: 300px;
+    }
 
+    .knowMoreBox {
+        text-align: center;
+    }
+
+    .knowMore {
+        display: inline-block;
+    }
+}
+blockquote {
+    position: relative;
+    margin: 0.5em;
+    padding: 0.5em 2em 0.5em 3em;
+    font-size: $largeTitle;
+}
+blockquote:before {
+    position: absolute;
+    font-size: 6em;
+    line-height: 1;
+    top: 0;
+    left: 0;
+    content: "\201C";
+}
+blockquote:after {
+    position: absolute;
+    float:right;
+    font-size:6em;
+    line-height: 0.75;
+    right:0;
+    bottom:-0.5em;
+    content: "\201D";
+}
 }
