--- a/src/pages/user/components/jjcsearchModal/JJCSearchModal.scss
+++ b/src/pages/user/components/jjcsearchModal/JJCSearchModal.scss
@@ -1,29 +1,24 @@
 @import '../../../../utils/variables.scss';
 
+.JJCSEARCH-MODAL{
+
+hr {
+    border: 1px solid #1e2350;
+}
 .name-container {
     font-style: normal;
     font-weight: $bold;
     font-size: $largeTitle;
+    color: #2c5797;
+    text-transform: uppercase;
 }
-
-.Btn-reject {
-    background-color: rgba(255,64,32, 0.8)!important;
-    width:100%;
-  }
-
-.Btn-accept {
-    background-color: $green!important;
-    margin-right: 10px;
-    width:100%;
+.location-container{
+    color: #2c5797;
+    text-transform: uppercase;
 }
-
-.Btn-submit {
-    background-color: $darkBlue;
-    margin-top:10px;
-    width:100%;
-    color: $white;
+.location-container img{
+    padding: 3px;
 }
-
 .info-container {
     width:100%;
     background-color: $whiteSmoke;
@@ -47,71 +42,20 @@
 
 .info-container-headers {
     margin-left:2px;
-    color: $charcoalBlack;
+    color: #ff4020;
     text-align: center;
     font-weight: $semiBold;
-    font-size: $titleSize;
+    font-size: 14px;
+    text-transform: uppercase;
 }
-
 .info-container-info {
     margin-left:5px;
-    color: $charcoalBlack;
+    color: #2c5797;
     font-weight: $lightBold;
-    font-size: $titleSize;
-}
-.admin-checkbox{
-  transform: scale(1.25);
-  margin-left: 10px;
-}
-.admin-checkbox:after {
-    content: " ";
-    background-color: #4CB576 !important;
-    color: #fff;
-    display: inline-block;
-    visibility: visible;
-    padding: 0px 3px;
-    border-radius: 3px;
-}
-.admin-checkbox:checked:after {
-    content: "\2714";
-    border-radius: 3px;
-    height: 13px;
-    display: block;
-    width: 14px;
-    text-align: center;
-    font-size: 9px;
-    color: white;
-}
-
-.confirmation_popup {
-    border: '1px solid #ccc'; 
-    border-radius: '4px'; 
-    padding: '10px';
-    background-color: '#f7f7f7';
-
-    .yes-button {
-        margin-left: 8px;
-        margin-right: 8px;
-        padding: 8px 16px;
-        background-color: #4CAF50;
-        color: white;
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        font-size: 16px;
-      }
-    
-    .no-button {
-        padding: 8px 16px;
-        background-color: #f44336;
-        color: white;
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        font-size: 16px;
-    }
+    font-size: 14px;
 }
 .linkedIn-url {
     color: #2c5797;
     word-wrap: break-word;
+}
 }
