--- a/src/pages/admin/AdminNavbar.scss
+++ b/src/pages/admin/AdminNavbar.scss
@@ -1,7 +1,7 @@
 @import "../../utils/variables.scss";
 
 .navbar {
-  border-bottom: 1px solid $pageBackground;
+  border-bottom: 1px solid black;
 }
 
 .left-section {
