--- a/src/components/userModal/UserModal.scss
+++ b/src/components/userModal/UserModal.scss
@@ -56,7 +56,7 @@
 .info-container-info {
     margin-left:5px;
     color: $charcoalBlack;
-    font-weight: $lightBold;
+    font-weight: 600;
     font-size: $titleSize;
 }
 .admin-checkbox{
