Fixed about us issue and removed tc code and moved to different branch

--- a/src/pages/landingpage/components/aboutUs/AboutUs.scss
+++ b/src/pages/landingpage/components/aboutUs/AboutUs.scss
@@ -7,7 +7,7 @@
 .aboutUsImage {
     height: 500px;
     background-color: #ccc;
-    background: url(../../../../assets/images/AboutUS.svg);
+    background: url(../../../../assets/images/AboutUs.svg);
     background-size: cover;
     background-position: center;
 }
