--- a/src/pages/landingpage/components/landingAboutUs/LandingAboutUs.scss
+++ b/src/pages/landingpage/components/landingAboutUs/LandingAboutUs.scss
@@ -50,8 +50,10 @@ blockquote {
     margin: 0.5em;
     padding: 0.5em 2em 0.5em 3em;
     font-size: $largeTitle;
+    font-family: $font;
 }
 blockquote:before {
+    font-family: $font;
     position: absolute;
     font-size: 6em;
     line-height: 1;
@@ -60,6 +62,7 @@ blockquote:before {
     content: "\201C";
 }
 blockquote:after {
+    font-family: $font;
     position: absolute;
     float:right;
     font-size:6em;
