--- a/src/components/register/Register.scss
+++ b/src/components/register/Register.scss
@@ -2,7 +2,7 @@
 
 .register-container{
   margin: 0;
-  background: $bgBlue;
+  background-color: whitesmoke;
 }
 
 .register-col{
@@ -10,7 +10,7 @@
 }
 
 .register-text{
-  color: $white;
+  color: black;
   text-align: center;
   margin-top: 2%;
 }
@@ -23,7 +23,7 @@
   padding: 5%;
   border-radius: 5px;
   background: $white;
-
+  border: 1px solid black;
   .error {
     color: red;
     margin-bottom: 16px;
@@ -31,12 +31,12 @@
 }
 
 .login-link{
-  color: $white;
+  color: black;
   text-decoration: underline;
 }
 
 .login-link:hover{
-  color: $white;
+  color: black;
 }
 
 //.label{
